--- a/sway/front-end/src/styles/main.scss
+++ b/sway/front-end/src/styles/main.scss
@@ -1,9 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap');
+
 * {
   box-sizing: border-box;
   list-style: none;
+  font-family: 'Prompt', sans-serif;
+  text-align: center;
 }
 
+a {
+  color: black;
+  text-decoration: unset;
+}
+h4 {
+  font-weight: 400;
+}
+h6 {
+  font-weight: 300;
+}
+.home a,
+.nav a {
+  :hover {
+    transform: scale(1.1);
+  }
+}
 .nav {
+  margin-top: -10px;
+  margin-bottom: -10px;
+  position: sticky;
+  top: 0;
+  background: white;
   ul {
     list-style: none;
     display: flex;
@@ -21,11 +46,33 @@
       margin-left: 5px;
     }
   }
+  .logo {
+    height: 50px;
+    width: 50px;
+    filter: invert(52%) sepia(37%) saturate(6374%) hue-rotate(164deg)
+      brightness(98%) contrast(102%);
+  }
 }
 
 .footer-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
+  justify-content: center;
+}
+
+.bottom-row {
+  display: flex;
+  justify-content: space-between;
+}
+.created h5 {
+  font-weight: 400;
+  font-style: italic;
+  text-decoration: underline;
+}
+
+.footer-logo {
+  height: 50px;
+  width: 50px;
+  filter: invert(52%) sepia(37%) saturate(6374%) hue-rotate(164deg)
+    brightness(98%) contrast(102%);
 }
