--- a/sway/front-end/src/styles/main.scss
+++ b/sway/front-end/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap');
+@import '../../node_modules/bootstrap/dist/css/bootstrap.css';
 
 * {
   box-sizing: border-box;
@@ -14,65 +15,51 @@ a {
 h4 {
   font-weight: 400;
 }
+h5 {
+  font-weight: 300;
+}
 h6 {
   font-weight: 300;
 }
 .home a,
-.nav a {
+nav a {
   :hover {
     transform: scale(1.1);
   }
 }
-.nav {
-  margin-top: -10px;
-  margin-bottom: -10px;
-  position: sticky;
-  top: 0;
-  background: white;
-  ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
 
-  a {
-    color: unset;
-    text-decoration: none;
-  }
-
-  @media only screen and (max-width: 600px) {
-    .nav .main {
-      margin-left: 5px;
-    }
-  }
-  .logo {
-    height: 50px;
-    width: 50px;
-    filter: invert(52%) sepia(37%) saturate(6374%) hue-rotate(164deg)
-      brightness(98%) contrast(102%);
-  }
+.logo {
+  filter: invert(52%) sepia(37%) saturate(6374%) hue-rotate(164deg)
+    brightness(98%) contrast(102%);
+  height: 40px;
+  width: 50px;
 }
 
-.footer-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.bottom-row {
-  display: flex;
-  justify-content: space-between;
-}
-.created h5 {
-  font-weight: 400;
-  font-style: italic;
-  text-decoration: underline;
+footer a {
+  color: white;
 }
 
 .footer-logo {
-  height: 50px;
-  width: 50px;
   filter: invert(52%) sepia(37%) saturate(6374%) hue-rotate(164deg)
     brightness(98%) contrast(102%);
+}
+.hidden {
+  display: none;
+}
+
+.pt-5 {
+  padding-top: 1rem !important;
+}
+.pb-4 {
+  padding-bottom: 1rem !important;
+}
+
+.footer .container {
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+}
+.nav {
+  margin-bottom: 2rem;
 }
