local storage complete

--- a/sway/front-end/src/styles/home.scss
+++ b/sway/front-end/src/styles/home.scss
@@ -125,17 +125,17 @@
   width: 150px;
   height: 50px;
   cursor: pointer;
-  // font-weight: bold;
+  font-weight: 400;
   color: black;
   background: white;
-  border: 1px solid coral;
-  box-shadow: 5px 5px 0 black, -5px -5px 0 black, -5px 5px 0 black,
-    5px -5px 0 black;
+  border: 2px solid rgb(42, 185, 201);
+  box-shadow: 3px 3px 0 black, -3px -3px 0 black, -3px 3px 0 black,
+    3px -3px 0 black;
   transition: 500ms ease-in-out;
 }
 
 .med-button:hover {
-  box-shadow: 20px 5px 0 black, -20px -5px 0 black;
+  box-shadow: 20px 5px 0 black, -20px -5px 0 rgb(42, 185, 201);
 }
 
 .med-button:focus {
