--- a/sway/front-end/src/styles/main.scss
+++ b/sway/front-end/src/styles/main.scss
@@ -36,6 +36,7 @@ nav a {
 footer a {
   color: #e0e9f3;
 }
+
 .main-footer a:hover {
   color: #18cdba;
 }
@@ -61,6 +62,11 @@ footer a {
 
   align-items: center;
   justify-content: center;
+}
+.footer {
+  position: relative;
+  bottom: 0px;
+  width: 100%;
 }
 
 main {
