--- a/sway/front-end/src/styles/home.scss
+++ b/sway/front-end/src/styles/home.scss
@@ -65,6 +65,7 @@
   }
 
   .second-section {
+    background: #0c1527;
     h6 {
       font-weight: 400;
     }
@@ -76,12 +77,19 @@
 
   .rebalance,
   .refocus {
+    padding: 3rem;
+    border-radius: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     img {
       height: 50px;
+      filter: invert(95%) sepia(7%) saturate(875%) hue-rotate(180deg)
+        brightness(100%) contrast(91%);
+    }
+    a {
+      color: #e0e9f3;
     }
   }
 
@@ -101,6 +109,8 @@
     justify-content: space-evenly;
     align-items: center;
     height: 300px;
+
+    color: #0c1527;
   }
 
   .notes,
