--- a/sway/front-end/src/components/audio-controls/ControlPanel.scss
+++ b/sway/front-end/src/components/audio-controls/ControlPanel.scss
@@ -14,9 +14,10 @@
   width: 100%;
 }
 .timer-logo img {
-  height: 50px;
-  width: 50px;
-  margin-left: 99%;
-  margin-bottom: -5%;
+  height: 45px;
+  width: 45px;
+  margin-left: 87%;
+  margin-bottom: -10%;
+  margin-top: -1%;
   background: #0c1527;
 }
