--- a/sway/front-end/src/styles/home.scss
+++ b/sway/front-end/src/styles/home.scss
@@ -20,17 +20,17 @@
   }
   .background-wrapper {
     height: 100%;
-    background-image: linear-gradient(
-      268deg,
-      rgba(0, 0, 0, 0.3) 22%,
-      rgba(0, 0, 0, 0.6) 87%
-    );
+    // background-image: linear-gradient(
+    //   268deg,
+    //   rgba(0, 0, 0, 0.3) 22%,
+    //   rgba(0, 0, 0, 0.6) 87%
+    // );
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
   }
   .top-section {
-    background-image: url('../images/peace1.jpg');
+    background-image: url('../images/sea.jpg');
     display: flex;
     flex-direction: column;
 
@@ -40,7 +40,7 @@
     //   background-attachment: fixed;
     justify-content: center;
     flex-grow: 1;
-    height: 500px;
+    height: 600px;
     inset: 0px;
   }
 
@@ -48,7 +48,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    color: white;
+    color: #0c1527;
 
     p {
       border: white 1.2px solid;
