switch to forum

--- a/sway/front-end/src/styles/med-list.scss
+++ b/sway/front-end/src/styles/med-list.scss
@@ -24,6 +24,7 @@
     padding-left: 0;
   }
   button {
+    display: block;
     background-color: #0c1527;
     color: #e0e9f3;
     border-radius: 75px;
