--- a/sway/front-end/src/styles/timer.scss
+++ b/sway/front-end/src/styles/timer.scss
@@ -21,6 +21,7 @@
   button.settings {
     width: auto;
     background-color: #a6adbb;
+    color: white;
     border-radius: 10px;
     padding: 10px 20px;
     font-size: 1.4rem;
@@ -37,5 +38,6 @@
     margin-bottom: 10px;
     margin-top: 20px;
     text-transform: capitalize;
+    font-size: 1rem;
   }
 }
