--- a/sway/front-end/src/styles/timer.scss
+++ b/sway/front-end/src/styles/timer.scss
@@ -4,7 +4,7 @@
   color: #e0e9f3;
 }
 
-.timer {
+.med-timer {
   max-width: 340px;
   padding-top: 7rem;
   margin: 0 auto;
@@ -24,6 +24,7 @@
     color: white;
     border-radius: 10px;
     padding: 10px 20px;
+    margin-bottom: 1rem;
     font-size: 1.4rem;
     line-height: 36px;
     svg {
