--- a/sway/front-end/src/styles/profile.scss
+++ b/sway/front-end/src/styles/profile.scss
@@ -1,4 +1,34 @@
 .profile {
   background-color: #0c1527;
   color: #e0e9f3;
+  padding-top: 5rem;
+  min-height: 90vh;
+  h4 {
+    text-transform: capitalize;
+  }
+  .stats {
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 3rem;
+    padding-top: 1rem;
+    h4 {
+      color: #18cdba;
+    }
+  }
+}
+.profile-fav {
+  ul {
+    padding-left: 0;
+  }
+  h3 {
+    color: #18cdba;
+    margin-top: 2rem;
+  }
+  h5,
+  p {
+    display: none;
+  }
+}
+#fav-heading {
+  margin-bottom: 2rem;
 }
