--- a/sway/front-end/src/styles/note-list.scss
+++ b/sway/front-end/src/styles/note-list.scss
@@ -3,13 +3,14 @@
   background-color: #0c1527;
   padding-right: 15px;
   padding-left: 15px;
+  padding-top: 5rem;
 }
 
 .note-list {
   ul {
     padding-left: 0;
   }
-  padding-top: 5rem;
+  padding-top: 1rem;
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -38,4 +39,48 @@
 .save:hover {
   cursor: pointer;
   background-color: #fef68a;
+}
+.note-search {
+  background-color: #e0e9f3;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  padding: 5px;
+  margin-bottom: 0.5rem;
+
+  input {
+    border: none;
+    background-color: #e0e9f3;
+    text-align: left;
+  }
+  input:focus {
+    outline: none;
+  }
+}
+
+.note-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  h1 {
+    color: #18cdba;
+  }
+}
+
+.light-mode {
+  .notes-container {
+    background-color: #e0e9f3;
+  }
+  .note-search {
+    background-color: #0c1527;
+    color: #e0e9f3;
+    input {
+      background-color: #0c1527;
+      color: #e0e9f3;
+    }
+  }
+  background-color: #e0e9f3;
+  h1 {
+    color: #0c1527;
+  }
 }
