--- a/sway/front-end/src/styles/main.scss
+++ b/sway/front-end/src/styles/main.scss
@@ -57,16 +57,6 @@ footer a {
   padding-bottom: 1rem !important;
 }
 
-.footer .container {
-  display: flex;
-  justify-content: center;
-}
-.footer {
-  position: relative;
-  bottom: 0px;
-  width: 100%;
-}
-
 main {
   min-height: 85vh;
 }
@@ -78,4 +68,10 @@ main {
 }
 .navbar a:hover {
   color: #18cdba;
+}
+
+.main-footer {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-around;
 }
