--- a/sway/front-end/src/styles/meditate.scss
+++ b/sway/front-end/src/styles/meditate.scss
@@ -1,5 +1,6 @@
 .med-wrapper {
-  padding-top: 5rem;
+  min-height: 92vh;
+  padding-top: 10rem;
   display: flex;
   justify-content: space-evenly;
   background-repeat: no-repeat;
@@ -10,5 +11,6 @@
   button {
     background: #0c1527;
     color: #e0e9f3;
+    padding: 1rem;
   }
 }
