--- a/sway/front-end/src/styles/note-list.scss
+++ b/sway/front-end/src/styles/note-list.scss
@@ -1,5 +1,5 @@
 .notes-container {
-  min-height: 90vw;
+  min-height: 90vh;
   background-color: #0c1527;
   padding-right: 15px;
   padding-left: 15px;
