--- a/sway/front-end/src/styles/home.scss
+++ b/sway/front-end/src/styles/home.scss
@@ -20,11 +20,7 @@
   }
   .background-wrapper {
     height: 100%;
-    // background-image: linear-gradient(
-    //   268deg,
-    //   rgba(0, 0, 0, 0.3) 22%,
-    //   rgba(0, 0, 0, 0.6) 87%
-    // );
+
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
@@ -33,11 +29,9 @@
     background-image: url('../images/sea.jpg');
     display: flex;
     flex-direction: column;
-
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    //   background-attachment: fixed;
     justify-content: center;
     flex-grow: 1;
     height: 600px;
@@ -90,6 +84,9 @@
     }
     a {
       color: #e0e9f3;
+      :hover {
+        color: #18cdba;
+      }
     }
   }
 
@@ -154,4 +151,7 @@
 
 .med-button:focus {
   outline: none;
+}
+.row {
+  display: flex;
 }
