--- a/sway/front-end/src/styles/med-show.scss
+++ b/sway/front-end/src/styles/med-show.scss
@@ -1,7 +1,17 @@
 .meditation-show {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   padding-top: 5rem;
+  min-height: 92vh;
+  background: #1d366d;
+  color: #e0e9f3;
+  h2 {
+    margin-bottom: 2rem;
+  }
+  .categories {
+    font-style: italic;
+    font-size: small;
+    margin-bottom: 2rem;
+  }
 }
