--- a/sway/front-end/src/styles/feed.scss
+++ b/sway/front-end/src/styles/feed.scss
@@ -1,3 +1,12 @@
 .feed {
   padding-top: 5rem;
+
+  ul {
+    padding-left: 0;
+  }
+}
+.start-thread {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
