--- a/sway/front-end/src/styles/feed.scss
+++ b/sway/front-end/src/styles/feed.scss
@@ -1,12 +1,72 @@
-.feed {
+.feed-container {
   padding-top: 5rem;
+  min-height: 92vh;
+  background: #0c1527;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+
+  .categories {
+    padding-left: 0.4rem;
+  }
+}
+.feed-heading {
+  h2 {
+    color: #18cdba;
+  }
+  p {
+    color: #e0e9f3;
+  }
+}
+
+.post-list {
+  a {
+    color: unset;
+  }
+
+  h2 {
+    font-weight: 400;
+    font-size: 1.5rem;
+  }
+
+  h4 {
+    font-size: 0.8rem;
+  }
+
+  p {
+    font-size: 0.8rem;
+    font-weight: 200;
+  }
 
   ul {
     padding-left: 0;
+
+    li:nth-child(odd) {
+      background-color: #e0e9f3;
+      color: #0c1527;
+      border: black 1px solid;
+    }
+    li:nth-child(even) {
+      h3 {
+        color: white;
+      }
+      color: #e0e9f3;
+      background-color: #0c1527;
+      border: #18cdba 1px solid;
+    }
+
+    li {
+      background: #e0e9f3;
+      border-radius: 20px;
+      padding: 0.3rem;
+      margin-bottom: 10px;
+    }
   }
 }
+.heading-posts {
+  max-width: 60%;
+}
 .start-thread {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  max-width: 7%;
+  color: #18cdba;
 }
