--- a/sway/front-end/src/styles/article.scss
+++ b/sway/front-end/src/styles/article.scss
@@ -1,4 +1,82 @@
 .article-show {
   padding-top: 5rem;
   white-space: pre-wrap;
+  background: #0c1527;
+  min-height: 92vh;
+  color: #e0e9f3;
+  h2 {
+    font-weight: 400;
+    font-size: 1.5rem;
+  }
+  .edit-delete {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    svg {
+      height: 35px;
+    }
+    color: #18cdba;
+  }
+  .comments {
+    margin-top: 3rem;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: flex-start;
+  }
+  .comment-body {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    svg {
+      height: 25px;
+      padding-bottom: 2px;
+    }
+  }
+}
+.time-views {
+  display: flex;
+  justify-content: space-evenly;
+}
+.top-article {
+  border: 1px solid #e0e9f3;
+  border-radius: 50px;
+  padding: 10px;
+  margin: 0 1rem 0 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  min-height: 15rem;
+}
+.comment-username {
+  color: #18cdba;
+  position: absolute;
+  left: 8px;
+}
+.comment-text {
+  max-width: 50%;
+}
+.comment-time {
+  position: absolute;
+  right: 1%;
+  font-size: 0.8rem;
+}
+.leave-comment {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.leave-comment .comment-textbox {
+  border: none;
+  background-color: #e0e9f3;
+  text-align: left;
+  margin-right: 1rem;
+  border-radius: 10px;
+}
+.sub-comment {
+  color: #e0e9f3;
+  border: 1px solid white;
+  border-radius: 10px;
+}
+.sub-comment:hover {
+  color: #18cdba;
 }
