fixed thread look

--- a/sway/front-end/src/styles/audio-player.scss
+++ b/sway/front-end/src/styles/audio-player.scss
@@ -18,6 +18,7 @@
   background-color: #0c1527;
   padding: 30px 50px;
   border-radius: 10px;
+  border: 1px solid #18cdba;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.479);
   margin-bottom: 2rem;
 }
