--- a/sway/front-end/src/styles/med-show.scss
+++ b/sway/front-end/src/styles/med-show.scss
@@ -4,7 +4,7 @@
   align-items: center;
   padding-top: 5rem;
   min-height: 92vh;
-  background: #1d366d;
+  background: #0c1527;
   color: #e0e9f3;
   h2 {
     margin-bottom: 2rem;
