--- a/sway/front-end/src/styles/article.scss
+++ b/sway/front-end/src/styles/article.scss
@@ -18,10 +18,8 @@
     color: #18cdba;
   }
   .comments {
-    margin-top: 3rem;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: flex-start;
+    margin-top: 1.5rem;
+    min-height: 20vh;
   }
   .comment-body {
     width: 100%;
@@ -35,30 +33,37 @@
 }
 .time-views {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
+  gap: 8rem;
+  font-size: 0.8rem;
+  padding-top: 1rem;
+  color: #a6adbb;
 }
 .top-article {
-  border: 1px solid #e0e9f3;
-  border-radius: 50px;
+  border-bottom: 1px solid #e0e9f3;
+  border-radius: 10px;
   padding: 10px;
-  margin: 0 1rem 0 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  min-height: 15rem;
+  min-height: 12rem;
 }
 .comment-username {
   color: #18cdba;
   position: absolute;
   left: 8px;
+  text-transform: capitalize;
 }
 .comment-text {
   max-width: 50%;
+  display: flex;
+  text-align: left;
 }
 .comment-time {
   position: absolute;
   right: 1%;
   font-size: 0.8rem;
+  color: #a6adbb;
 }
 .leave-comment {
   display: flex;
@@ -79,4 +84,7 @@
 }
 .sub-comment:hover {
   color: #18cdba;
+}
+.comment-list {
+  margin-top: 2rem;
 }
