--- a/sway/front-end/src/styles/article.scss
+++ b/sway/front-end/src/styles/article.scss
@@ -13,7 +13,8 @@
     justify-content: center;
     align-items: center;
     svg {
-      height: 35px;
+      height: 20px;
+      margin-bottom: 5px;
     }
     color: #18cdba;
   }
