--- a/sway/front-end/src/styles/audio-player.scss
+++ b/sway/front-end/src/styles/audio-player.scss
@@ -22,3 +22,8 @@
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.479);
   margin-bottom: 2rem;
 }
+@media screen and (max-width: 600px) {
+  .audio-container {
+    width: unset;
+  }
+}
