--- a/sway/front-end/src/styles/med-show.scss
+++ b/sway/front-end/src/styles/med-show.scss
@@ -6,6 +6,7 @@
   min-height: 92vh;
   background: #0c1527;
   color: #e0e9f3;
+
   h2 {
     margin-bottom: 2rem;
   }
@@ -14,4 +15,7 @@
     font-size: small;
     margin-bottom: 2rem;
   }
+}
+.med-show-heading {
+  max-width: 85%;
 }
