--- a/sway/front-end/src/styles/note-list.scss
+++ b/sway/front-end/src/styles/note-list.scss
@@ -72,11 +72,11 @@
     background-color: #e0e9f3;
   }
   .note-search {
-    background-color: #0c1527;
+    background-color: white;
     color: #e0e9f3;
     input {
-      background-color: #0c1527;
-      color: #e0e9f3;
+      background-color: white;
+      color: #0c1527;
     }
   }
   background-color: #e0e9f3;
