--- a/sway/front-end/src/styles/med-list.scss
+++ b/sway/front-end/src/styles/med-list.scss
@@ -44,6 +44,7 @@
   align-items: center;
   justify-content: center;
   min-width: 70%;
+  max-width: 70%;
   border-left: 1px solid #0c1527;
 
   a {
