--- a/sway/front-end/src/styles/main.scss
+++ b/sway/front-end/src/styles/main.scss
@@ -63,6 +63,9 @@ main {
 .navbar {
   border-bottom: 0.5px solid #18cdba;
 }
+.footer {
+  border-top: 0.5px solid #18cdba;
+}
 
 .navbar a {
   padding-top: 0;
